--- a/sale/src/sass/_components/_reset.scss
+++ b/sale/src/sass/_components/_reset.scss
@@ -123,7 +123,7 @@ ul {
 		display: block;
 		width: auto;
 	}
-	>div {
+	>[class*=col-] {
 		position: relative;
 		display: table-cell;
 		float: none;
