--- a/sale/src/sass/_partials/_header.scss
+++ b/sale/src/sass/_partials/_header.scss
@@ -61,6 +61,7 @@ header {
 	background-position: center bottom;
 	background-size: cover;
 	padding: 15px 15px 50px 15px;
+	margin-top: -4px;
 	@include respond-to(mobile) {
 		margin-top: -2px;
 	}
